--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ word-wrap: break-word;
 <h1>&nbsp;&nbsp;Front End Prctice</h1>
 </div>
 <div id="left">
-	<h2><p><a href="https://caojx.github.io">&nbsp;&nbsp;第一次作业
+	<h2><p><a href="https://caojx13.github.io">&nbsp;&nbsp;第一次作业
 	</a></p></h2>
     <h2><p><a href="log-one.html">&nbsp;&nbsp;第一篇日志</a></p></h2>
 </div> 
