--- a/log-one.html
+++ b/log-one.html
@@ -6,7 +6,7 @@
 <style type="text/css">
 body
 {
-background-image:url(images/img.bmp);
+background-image:url(images/background.jpg);
 background-repeat:no-repeat;
 background-position:50%;
 background-attachment:fixed;
