--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@ word-wrap: break-word;
 	<h2><p><a href="https://caojx13.github.io">&nbsp;&nbsp;第一次作业
 	</a></p></h2>
     <h2><p><a href="log-one.html">&nbsp;&nbsp;第一篇日志</a></p></h2>
+    <h2><p><a href="WaterFallDemo.html">&nbsp;&nbsp;第四次作业</a></p></h2>
 </div> 
 <div id="right">
 <h1>&nbsp;&nbsp;&nbsp;About me</h1>
