--- a/WaterFallDemo.html
+++ b/WaterFallDemo.html
@@ -111,12 +111,12 @@ z-index:1;
     
     <div id="innerdiv" style="position:absolute;"><img id="bigimg" style="border:5px solid #fff;display:none;"  /></div>
     <div id="commentDiv" style="border:5px solid #fff;display:none;">
-    <img src="src/close.png" id = "close" style="height:30px;width:30px;top:-15px;right:-15px;;position:absolute;cursor:pointer;" />
+    <img src="http://caojx13.github.io/images/close.png" id = "close" style="height:30px;width:30px;top:-15px;right:-15px;;position:absolute;cursor:pointer;" />
     <h1>title</h1>
     <hr>
     <h3>正文</h3>
-    <img src="src/last.png" id = "last" style="height:50px;width:75px;bottom:0;position:absolute;cursor:pointer;"/>
-    <img src="src/next.png" id = "next" style="height:50px;width:75px;bottom:0;right:0;position:absolute;cursor:pointer;"/>
+    <img src="http://caojx13.github.io/images/last.png" id = "last" style="height:50px;width:75px;bottom:0;position:absolute;cursor:pointer;"/>
+    <img src="http://caojx13.github.io/images/next.png" id = "next" style="height:50px;width:75px;bottom:0;right:0;position:absolute;cursor:pointer;"/>
     </div>
 </div> 
 
